--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,11 @@
     <ol id="messages"></ol>
 
     <form id="message-form">
-        <input name="message" type="text" placeholder="Enter your message"/>
+        <input name="message" type="text" placeholder="Enter your message" />
         <button>send</button>
     </form>
+    <button id='send-location'>Send-Location</button>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src='./js/libs/jquery-3.3.1.min.js'></script>
     <script src='/js/index.js'></script>
