added new style sheet for chat interface

--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,28 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
-    <p> Welcome to chat app </p>
-    <ol id="messages"></ol>
+<body class='chat'>
+    <div class='chat__sidebar'>
+        <h3> People</h1>
+            <div id='users'></div>
+    </div>
 
-    <form id="message-form">
-        <input name="message" type="text" placeholder="Enter your message" />
-        <button>send</button>
-    </form>
-    <button id='send-location'>Send-Location</button>
+    <div class='chat__main'>
+        <ol id="messages" class='chat__messages'></ol>
+        <div class='chat__footer'>
+            <form id="message-form">
+                <input name="message" type="text" placeholder="Message" autocomplete="off" autofocus/>
+                <button>send</button>
+            </form>
+            <button id='send-location'>Send-Location</button>
+        </div>
+
+    </div>
+
+
 
     <script src="/socket.io/socket.io.js"></script>
     <script src='./js/libs/jquery-3.3.1.min.js'></script>
